--- a/stylesheet.css
+++ b/stylesheet.css
@@ -97,12 +97,81 @@ a:focus {
 	transition: all 0.2s ease 0s;
 }
 
+/* Phosphene preview */
+#phosphene {
+	border-top: 1px solid #e2e4e7;
+	padding-top: 14px;
+	padding-bottom: 14px;
+	margin: 0 auto;
+	height: 686px;
+}
+
+#phosphene .desc a {
+	font-size: 16px;
+	font-weight: 700;
+	line-height: 30px;
+	color: #1aa39a;
+	text-decoration: none;
+	padding-bottom: 1px;
+	border-bottom: 1px dotted #1aa39a;
+	transition: all 0.2s ease 0s;
+}
+
+#phosphene .desc a:hover {
+	color: #1aa39a;
+	transition: all 0.2s ease 0s;
+	border-bottom-style: solid;
+}
+
+#phosphene img {
+	position: relative;
+	width: 100%;
+	margin: 0 auto;
+	border-radius: 2px;
+	margin-bottom: -4px;
+	border: 1px solid #e2e4e7;
+}
+
+#phosphene h2 {
+	position: absolute;
+	display: block;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	opacity: 0;
+	padding: 0;
+	margin: 0;
+	border-radius: 2px;
+
+	text-align: center;
+	font-size: 20px;
+	font-weight: 700;
+	background: rgba(255,255,255,0.92);
+	border: 1px solid #dcdde0;
+	color: #1aa39a;
+	transition: all 0.2s ease 0s;
+
+	line-height: 518px;
+}
+
+#phosphene a:hover h2 {
+	opacity: 1;
+	transition: all 0.2s ease 0s;
+}
+
+#phosphene .preview {
+	position: relative;
+	height: 518px;
+	margin: 0 20px 0 20px;
+}
+
 /* Fleche preview */
 #fleche {
 	border-top: 1px solid #e2e4e7;
 	padding-top: 14px;
 	padding-bottom: 14px;
-	height: 766px;
+	height: 776px;
 }
 
 #fleche #left {
